# pytest-kafkavents

./: README.md  app-services.properties  conftest.py  kafkavent.txt  kafkavent.xml  pytest_kafkavents.py  setup.cfg  test_pytest_plugin.py  tox.ini
.github/workflows/: publish-to-test-pypi.yml
example_tests/: test_pytest_plugin.py  test_pytest_plugin2.py
example_tests/more_tests/: test_pytest_plugin3.py
examples/: example.py  kafka_conf.json  kafkavent.xml
