[metadata]
name = pytest-kafkavents
description = A plugin to sent pytest results to an Ibutsu server
long_description = file: README.rst
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
include_package_data = True
py_modules = pytest_kafkavents
entry_points = file:entry_points.txt
setup_requires = setuptools_scm>=3.0.0
install_requires=
    pytest
    confluent-kafka
